  :meth:`Environment.popitems`, :meth:`Environment.clear`
  to match :meth:`dict.values`,
  :meth:`dict.pop`, :meth:`dict.popitems`, :meth:`dict.clear`.

- :class:`VectorOperationsDelegator` now has a method `__matmul__` to implement
  Python's matrix multiplication operator (PEP-0645).

- A rule to convert R POSIXct vectors to pandas Timestamp vectors was added (issue #418).


Changes
-------

- Starting several times the singleton :class:`EventProcessor` longer results
  in a :class:`RuntimeError`. This is now only a warning, addressing
  issue #182.

- The target version for the R package `dplyr` mapped is now 0.7.1, and
  :func:`rpy2.robjects.lib.dplyr.src_dt` (issue #357) and
  :func:`rpy2.robjects.lib.dplyr.src_desc` are no longer present.

- :meth:`Environment.keys` is now a iterator to match :meth:`dict.keys`,
  also an interator in Python 3.

- Target version of `ggplot2` library is 2.2.1.

- Option `stringsasfactors` in the constructor for the class `DataFrame` (if `False`, the
  strings are no longer converted to factors, and when converting from pandas data frames
  the default is to no longer convert columns of strings to factors.

- The R "magic" for jupyter is now more consistently using the conversion system, and the
  use of custom converters through the magic argument `-c` will work as expected.


Bugs fixed
----------

- :func:`numpy.float128` is not available on all platforms. The unit test
  for it is now skipped on systems where it is not present (issue #347)

- R pairlist objects can now be sliced (and issue #380 is resolved).

- Passing parameters names that are empty string to R function was
  causing a segfault (issue #409).

- Trying to build an atomic R vector from a Python object that has a length,
  but it not a sequence nor an iterator was causing a segfault (issue #407).


Release 2.8.6
=============

Bugs fixed
----------

- Trying to build an atomic R vector from a Python object that has a length,